--- a/smart-cat-server/package.json
+++ b/smart-cat-server/package.json
@@ -1,16 +1,14 @@
 {
   "name": "smart-cat-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "openai": "^6.7.0"
-  },
-  "private": true
+  }
 }
